src/github.com/ebay/akutan/query/parser/testdata/select/errors/var_star.res
Query:
SELECT ?rims * 
WHERE {
    ?rims <color> "Red"
}

Parsed:
Error: unable to parse query: line 1 column 14: expected WHERE
